<resources>
    <string name="app_name">TooFit</string>
    <string name="settingsStr">Settings</string>
    <string name="nav_header_title">TooFit</string>
    <string name="nav_header_subtitle">Nutritional Categories</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="greetingText1">Hello, Welcome to TooFit</string>
    <string name="greetingText2">Fill out the fields below to use the Body Transformation Tool.</string>
    <string name="appSummary">TooFit is an informational Nutrition app, created to help guide anyone to their personal physique and health standards. It was also created to pass Android Development 2. We offer specific and concise information regarding each nutritional food group to help educate users of exactly what is being put in their bodies everyday. Above is our Body Transformation Tool. If you haven\'t already, fill out the fields and click \'Get Plan\' to receive a personalized outline of what you should be consuming and how you should be exercising everyday to reach your specified fitness goals. We hope we can be a helping hand in you becoming a better you.</string>
    <string name="weight">Weight(kg):</string>
    <string name="height">Height(cm):</string>
    <string name="sex">Sex:</string>
    <string name="age">Age:</string>
    <string name="male">M</string>
    <string name="female">F</string>string>
    <string name="desiredWeight">Desired Weight(kg):</string>
    <string name="desiredMuscle">Desired Muscle Definition:</string>
    <string name="objective">Objective:</string>
    <string name="gain">Gain Muscle</string>
    <string name="slim">Slim Out</string>
    <string name="getPlan">Get Plan</string>
    <string name="proteins">Proteins</string>
    <string name="grains">Grains</string>
    <string name="vegetables">Vegetables</string>
    <string name="fruits">Fruits</string>
    <string name="dairy">Dairy</string>
    <string name="options">Options</string>
    <string name="macros">Daily Macros</string>
    <string name="protein">Protein:</string>
    <string name="carbs">Carbs:</string>
    <string name="fat">Fat:</string>
    <string name="calsPerDay">Daily Calories</string>
    <string name="toolDets">Transformation Details</string>
    <string name="tips">Tips</string>
    <string name="emailPlan">Email Plan</string>
    <string name="smsPlan">SMS Plan</string>
    <string name="guide">Food Guide</string>
    <string name="nearby">Gyms Nearby</string>
    <string name="cab">Call Cab</string>
    <string name="callHot">Call Hotline</string>
    <string name="smsHot">SMS Hotline</string>
    <string name="contact">Contact Us</string>

    <!-- Preference Titles -->
    <string name="personal_header">Personal Info</string>
    <string name="app_header">App Settings</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>