<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ToolFragment"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding8"
                android:orientation="vertical"
                android:background="@drawable/border">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/macros"
                    android:textStyle="bold"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/header_size"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/protein"
                            android:textColor="@color/textColor"
                            android:textSize="@dimen/text_size"
                            android:layout_weight="1"/>

                        <TextView
                            android:id="@+id/proteinMacroView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/textColor"
                            android:textSize="@dimen/text_size"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:paddingRight="@dimen/padding8"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/carbs"
                            android:textColor="@color/textColor"
                            android:textSize="@dimen/text_size"
                            android:layout_weight="1"/>

                        <TextView
                            android:id="@+id/carbsMacroView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/textColor"
                            android:textSize="@dimen/text_size"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:paddingRight="@dimen/padding8"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fat"
                            android:textColor="@color/textColor"
                            android:textSize="@dimen/text_size"
                            android:layout_weight="1"/>

                        <TextView
                            android:id="@+id/fatMacroView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/textColor"
                            android:textSize="@dimen/text_size"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:paddingRight="@dimen/padding8"/>
                    </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/calsPerDay"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/text_size"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/calsPerDayView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/text_size"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:paddingRight="@dimen/padding8"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding8"
                android:orientation="vertical"
                android:background="@drawable/border">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toolDets"
                    android:textColor="@color/textColor"
                    android:textStyle="bold"
                    android:textSize="@dimen/header_size" />

                <TextView
                    android:id="@+id/detailsView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/form_text_size"
                    android:padding="@dimen/padding8"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding8"
                android:orientation="vertical"
                android:background="@drawable/border">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tips"
                    android:textColor="@color/textColor"
                    android:textStyle="bold"
                    android:textSize="@dimen/header_size" />

                <TextView
                    android:id="@+id/tipsView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/form_text_size"
                    android:padding="@dimen/padding8"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding8">

            <Button
                android:id="@+id/emailPlanButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/emailPlan" />

            <Button
                android:id="@+id/smsPlanButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/smsPlan" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>

